--- a/modules/custom_module/custom_module.info.yml
+++ b/modules/custom_module/custom_module.info.yml
@@ -2,6 +2,8 @@ type: module
 name: Custom_module Ok
 description: 'Module Custom Form ok ~!!!'
 package: Custom
+libraries:
+  - custom_module/styling
 core_version_requirement: ^8.8 || ^9 || ^10
 php: 7.2
 configure: custom_module.links
