--- a/modules/custom_module/custom_module.routing.yml
+++ b/modules/custom_module/custom_module.routing.yml
@@ -15,10 +15,10 @@ custom_module.register:
   requirements:
     _permission: 'access content'
 custom_module.contact:
-  path: '/contact-form'
+  path: '/list-user'
   defaults:
     _title: 'Hãy liên hệ với chúng tôi để được hỗ trợ!!'
-    _form: 'Drupal\custom_module\Form\ContactForm'
+    _form: 'Drupal\custom_module\Form\ListUserForm'
   requirements:
     _permission: 'access content'
 custom_module.login:
