--- a/themes/lioa/lioa.info.yml
+++ b/themes/lioa/lioa.info.yml
@@ -3,6 +3,7 @@ type: theme
 base theme: stable9
 description: 'custom theme'
 alt text: 'custom theme'
+core_version_requirement : ^10
 package: Custom
 # version: VERSION
 
